--- a/main.html
+++ b/main.html
@@ -1,48 +1,50 @@
 <!DOCTYPE html>
-
 <html>
-
 <head>
-	<link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css">
 </head>
+<body>    
+    <script>
+        function secondHighest(arr) {
+            // Check if the array is empty or has only 1 element
+            if (arr.length < 2) {
+                return -Infinity;
+            }
+            
+            // Initialize highest and second highest variables
+            let highest = arr[0];
+            let secondHighest = -Infinity;
 
-<body>	
-	<script>
-		function secondHighest(arr) {
-			//Write your code here
-			let big = arr[0];
-	let big2 = arr[1];
+            // Iterate through the array to find the second highest element
+            for (let i = 1; i < arr.length; i++) {
+                if (arr[i] > highest) {
+                    secondHighest = highest;
+                    highest = arr[i];
+                } else if (arr[i] > secondHighest && arr[i] < highest) {
+                    secondHighest = arr[i];
+                }
+            }
 
-for(let t of arr){
-    if(t > big){
-        big2 = big;
-        big = t;
-    }
-    else if(t > big2 && big!= t){
-        big2 = t;
-    }
-}
+            // If all elements are the same, return -Infinity
+            if (secondHighest === -Infinity) {
+                return -Infinity;
+            }
 
-// console.log(big);
-// console.log(big2);
-			return secondHighest;
-			
-		}
+            return secondHighest;
+        }
 
-		function Main() {
-			// var n = prompt("Enter the number of elements");
-			var arr = [];
-			for (var i = 0; i < n; i++) {
-				arr[i] = prompt("Enter element " + (i+1));
-			}
-			// alert(secondHighest(arr));
-		}
-		Main();
-	</script>
+        function Main() {
+            // var n = prompt("Enter the number of elements");
+            var arr = [4, 2, 7, 5, 7, 3, 1]; // Example array
+            // var arr = []; // Uncomment this line to prompt user for input
+            // for (var i = 0; i < n; i++) {
+            //     arr[i] = prompt("Enter element " + (i+1));
+            // }
+            console.log(secondHighest(arr));
+        }
+        Main();
+    </script>
 
-    <script type="text/javascript" src="./script.js">
-</script>
-
+    <script type="text/javascript" src="./script.js"></script>
 </body>
-
 </html>
